# pyaudit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pyaudit.yml
openspec/changes/pyaudit-cli/: design.md  proposal.md  tasks.md
openspec/changes/pyaudit-cli/specs/: requirements.md
pyaudit/: cli.py  github.py  reporter.py  runner.py
pyaudit/parsers/: bandit.py  flake8.py  pylint.py
tests/: test_integration.py  test_parsers.py  test_reporter.py  test_runner.py
tests/fixtures/: clean.py  quality_issues.py  security_vulns.py  style_errors.py
