[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaudit"
version = "0.1.0"
description = "Unified Python code linting and static security analysis CLI"
requires-python = ">=3.9"
dependencies = [
    "flake8>=6.0",
    "pylint>=3.0",
    "bandit>=1.7",
    "requests>=2.28",
]

[project.scripts]
pyaudit = "pyaudit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
markers = ["integration: end-to-end tests that invoke real tools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyaudit*"]
